# api-restful

./: Readme.md
ejercicio1/: ejercicio_1.db  main.py  pyproject.toml
ejercicio1/api/: dependencies.py
ejercicio1/api/middleware/: exception_handler.py
ejercicio1/api/routers/: customer.py  product.py
ejercicio1/api/schemas/: customer.py  product.py
ejercicio1/app/domain/interfaces/: audit_service.py  customer_repository.py  product_repository.py
ejercicio1/app/domain/models/: audit.py  base.py  customer.py  product.py
ejercicio1/app/infrastructure/database/: connection.py
ejercicio1/app/infrastructure/repositories/: customer_repository.py  product_repository.py
ejercicio1/app/infrastructure/services/: audit_service.py
ejercicio2/: Dockerfile  ejercicio_2.db  main.py  pyproject.toml
ejercicio2/.github/workflows/: azure-pipeline.yml
ejercicio2/api/: dependencies.py
ejercicio2/api/routers/: auth.py  food.py
ejercicio2/api/schemas/: food.py
ejercicio2/app/: database.py
ejercicio2/app/domain/interfaces/: audit_service.py  food_repository.py
ejercicio2/app/domain/models/: audit.py  food.py  user.py
ejercicio2/app/domain/services/: oauth2.py
ejercicio2/app/infrastructure/database/: connection.py
ejercicio2/app/infrastructure/repositories/: food_repository.py
ejercicio2/app/infrastructure/services/: audit_service.py
